--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,22 +6,22 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   dartz: ^0.10.1
   flutter:
     sdk: flutter
-  flutter_riverpod: ^1.0.3
-  freezed_annotation: ^1.1.0
+  flutter_riverpod: ^1.0.4
+  freezed_annotation: ^2.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.7
-  flutter_lints: ^1.0.0
+  build_runner: ^2.2.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  freezed: ^1.1.1
+  freezed: ^2.1.0+1
 
 flutter:
 
