--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^1.0.4
   freezed_annotation: ^2.1.0
+  build_context: ^3.0.0
+
 
 dev_dependencies:
   build_runner: ^2.2.0
