Few more things added

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,8 +22,133 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    - prefer_single_quotes
+    - cancel_subscriptions
+    - close_sinks
+    - eol_at_end_of_file
+    - sized_box_for_whitespace
+    - avoid_unnecessary_containers
+    - avoid_print
+    - parameter_assignments
+    - avoid_relative_lib_imports
+    - always_use_package_imports
+    - avoid_empty_else
+
+analyzer:
+  plugins:
+    - dart_code_metrics
+
+  errors:
+    prefer_single_quotes: error
+    cancel_subscriptions: error
+    close_sinks: error
+    eol_at_end_of_file: error
+    sized_box_for_whitespace: error
+    avoid_unnecessary_containers: error
+    dead_code: error
+    unused_import: error
+    duplicate_import: error
+    avoid_print: error
+    parameter_assignments: error
+    avoid_relative_lib_imports: error
+    always_use_package_imports: error
+    avoid_empty_else: error
+
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.gr.dart"
+    - "**/*.freezed.dart"
+    - "**/*.config.dart"
+    - "**/generated/**"
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+dart_code_metrics:
+  metrics-exclude:
+    - test/**
+
+  # For clarification please visit: https://dartcodemetrics.dev/docs/rules/overview
+  rules:
+    - avoid-global-state:
+        severity: error
+    - no-equal-then-else:
+        severity: error
+    - avoid-missing-enum-constant-in-map:
+        severity: error
+    - avoid-nested-conditional-expressions:
+        acceptable-level: 2
+        severity: error
+    - avoid-unrelated-type-assertions:
+        severity: error
+    - prefer-correct-identifier-length:
+        min-identifier-length: 3
+        severity: error
+    - prefer-correct-identifier-length:
+        min-identifier-length: 3
+        exceptions:
+          [
+              "i",
+              id,
+          ]
+        severity: error
+    - prefer-correct-type-name:
+        min-length: 3
+        severity: error
+    - no-magic-number:
+        severity: warning
+        allowed: [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 3]
+        exclude:
+          - test/**
+
+    - always-remove-listener:
+        severity: performance
+    - avoid-returning-widgets:
+        severity: performance
+    - avoid-wrapping-in-padding:
+        severity: performance
+    - prefer-const-border-radius:
+        severity: performance
+
+    - binary-expression-operand-order:
+        severity: style
+    - member-ordering:
+        order:
+          - public-fields
+          - private-fields
+          - constructors
+          - public-methods
+          - private-methods
+        severity: style
+    - prefer-trailing-comma:
+        break-on: 4
+        severity: style
+    - prefer-extracting-callbacks:
+        severity: style
+
+    - avoid-non-null-assertion:
+        severity: warning
+    - avoid-throw-in-catch-block:
+        severity: warning
+    - avoid-unused-parameters:
+        severity: warning
+    - no-boolean-literal-compare:
+        severity: warning
+    - no-object-declaration:
+        severity: warning
+    - prefer-first:
+        severity: warning
+    - prefer-last:
+        severity: warning
+    - prefer-match-file-name:
+        severity: warning
+        exclude:
+          - "**/main.dart"
+
+  # For clarification please visit: https://dartcodemetrics.dev/docs/metrics/overview
+  metrics:
+    cyclomatic-complexity: 3
+    source-lines-of-code: 10
+    number-of-parameters: 4
+    maximum-nesting-level: 3
+    number-of-methods: 7
