--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^1.0.4
   freezed_annotation: ^2.1.0
+  dart_code_metrics: ^4.17.1
 
 dev_dependencies:
   build_runner: ^2.2.0
