--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   dart_code_metrics: ^4.17.1
   build_context: ^3.0.0
+  beamer: ^1.5.3
 
 dev_dependencies:
   build_runner: ^2.2.0
