--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   dart_code_metrics: ^4.18.3
   beamer: ^1.5.3
   equatable: ^2.0.5
+  connectivity_plus: ^2.3.7
 
 dev_dependencies:
   build_runner: ^2.2.1
