--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   beamer: ^1.5.3
   equatable: ^2.0.5
   connectivity_plus: ^2.3.7
+  file_picker: ^5.2.0
 
 dev_dependencies:
   build_runner: ^2.2.1
