--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   connectivity_plus: ^2.3.7
   file_picker: ^5.2.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   build_runner: ^2.2.1
