--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   connectivity_plus: ^2.3.7
   file_picker: ^5.2.0
   url_launcher: ^6.1.5
+  flutter_secure_storage: ^6.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   build_runner: ^2.2.1
