--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_messaging: ^13.0.2
   permission_handler: ^10.0.0
+  local_auth: ^2.1.2
 
 dev_dependencies:
   build_runner: ^2.2.1
